# Chimera-CLI-

./: .dockerignore  .editorconfig  .gitignore  AETHER_NEXUS_FULL_DOCUMENTATION.md  AETHER_NEXUS_GEN3_OMEGA (1).md  AETHER_NEXUS_GEN3_OMEGA.md  AETHER_NEXUS_OMEGA_ULTIMATE.md  AETHER_NEXUS_OMEGA_从零搭建完全指南.md  AETHER_NEXUS_OMEGA_从零搭建终极文档_v3.md  AETHER_NEXUS_OMEGA_模块级系统性优化分析报告.md  ATTENTION_PAPERS_SUMMARY.md  ATTENTION_PAPERS_SUMMARY_2020_2026.md  CHANGELOG.md  CHIMERA_NEXUS_COMPLETE_BUILD_GUIDE.md  CHIMERA_NEXUS_GEN2_INNOVATIONS.md  CODE_WIKI.md  Cargo.toml  DEEP_RESEARCH_34CRATE_OPTIMIZATION.md  DEEP_RESEARCH_LLM_ARCHITECTURE_MAPPING.md  DEEP_RESEARCH_OPTIMIZATION_ALGORITHM.md  Dockerfile  LICENSE  NEXUS_OMEGA_DEEP_OPTIMIZATION_REPORT.md  OMEGA_大模型架构魔改创新_AI_Agent项目套用设计.md  README.md  RELEASE_NOTES.md  arxiv_attention.csv  arxiv_sparse_attention.csv  chimera-creative-submission.html  install.ps1  install.sh  test_version_verification.ps1
crates/acb-governor/: Cargo.toml
crates/acb-governor/benches/: governor_bench.rs
crates/acb-governor/src/: budget_coordinator.rs  config.rs  error.rs  governor.rs  lib.rs  types.rs
crates/acb-governor/tests/: integration.rs  proptest.rs
crates/chimera-cli/: Cargo.toml
crates/chimera-cli/benches/: config_concurrency_bench.rs
crates/chimera-cli/src/: cli.rs  config.rs  i18n.rs  lib.rs  main.rs
crates/chimera-cli/tests/: cli.rs  config_lazy.rs  config_test.rs  proptest.rs
crates/chimera-mas/: Cargo.toml
crates/chimera-mas/benches/: mas_benchmark.rs
crates/chimera-mas/src/: chunker.rs  delegation.rs  error.rs  experts.rs  invariants.rs  lib.rs  orchestrator.rs  pdca.rs  quadrant.rs  scheduler.rs  stability.rs
crates/chimera-mas/tests/: agent_context_test.rs  agent_factory_test.rs  agent_meta_test.rs  agent_task_test.rs  archive_test.rs  budget_model_test.rs  delegation_test.rs  experts_test.rs  integration.rs  invariants_test.rs  knowledge_test.rs  orchestrator_test.rs  proptest.rs  quadrant_test.rs  scheduler_test.rs  stability_test.rs  token_budget_test.rs
crates/chimera-tui/: Cargo.toml
crates/chimera-tui/benches/: data_pipeline_bench.rs  render_bench.rs
crates/chimera-tui/src/: app.rs  command_palette.rs  config.rs  data.rs  error.rs  focus.rs  lib.rs  popup.rs  render.rs  subscriber.rs  types.rs
crates/chimera-tui/tests/: auto_scroll_test.rs  bidirectional_control_test.rs  chtc_panel_test.rs  clv_vector_panel_test.rs  color_gradient_test.rs  command_palette_test.rs  config_persistence_integration.rs  configurable_tick_test.rs  data_test.rs  decay_panel_test.rs  event_detail_test.rs  event_stream_panel_test.rs  focus_test.rs  fps_test.rs  global_keys_test.rs  health_panel_test.rs  help_overlay_test.rs  incremental_render_test.rs  integration.rs  live_data_test.rs  log_panel_test.rs  mcp_nodes_panel_test.rs  memory_panel_test.rs  metrics_dashboard_test.rs  metrics_history_persistence_test.rs  osa_sparse_panel_test.rs  panel_state_preservation_test.rs  parliament_virtual_scroll_test.rs  popup_test.rs  proptest.rs  quest_event_jump_test.rs  quest_panel_control_test.rs  render_test.rs  resource_monitor_panel_test.rs  router_panel_test.rs  security_panel_test.rs  subscriber_test.rs  sysinfo_panel_test.rs  task_manager_test.rs  timeline_panel_test.rs  (+4 more)
crates/chtc-bridge/: Cargo.toml
crates/chtc-bridge/benches/: bridge_benchmark.rs
crates/chtc-bridge/src/: bridge.rs  config.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/chtc-bridge/tests/: proptest.rs
crates/cmt-tiering/: Cargo.toml
crates/cmt-tiering/benches/: hot_lru.rs  pragma_capable_bench.rs
crates/cmt-tiering/src/: cold.rs  config.rs  coordinator.rs  decay.rs  error.rs  hot.rs  ice.rs  lib.rs  migrator.rs  pool.rs  storage_impl.rs  types.rs  warm.rs
crates/cmt-tiering/tests/: cold.rs  coordinator.rs  decay.rs  error_paths.rs  hot.rs  migrator.rs  pragma_capable_proptest.rs  pragma_capable_test.rs  proptest.rs  warm.rs
crates/csn-substitutor/: Cargo.toml
crates/csn-substitutor/benches/: substitutor_benchmark.rs
crates/csn-substitutor/src/: config.rs  degradation_chain.rs  error.rs  lib.rs  similarity.rs  substitutor.rs  types.rs
crates/csn-substitutor/tests/: integration.rs  proptest.proptest-regressions  proptest.rs
crates/decay-engine/: Cargo.toml
crates/decay-engine/benches/: decay_bench.rs
crates/decay-engine/src/: engine.rs  error.rs  lib.rs  types.rs
crates/decay-engine/tests/: decay.rs  proptest.rs
crates/decb-governor/: Cargo.toml
crates/decb-governor/benches/: budget_compute.rs
crates/decb-governor/src/: config.rs  error.rs  governor.rs  lib.rs  overflow.rs  types.rs
crates/decb-governor/tests/: concurrent.rs  error_paths.rs  integration_budget_exceeded.rs  proptest.rs
crates/efficiency-monitor/: Cargo.toml
crates/efficiency-monitor/benches/: monitor_benchmark.rs
crates/efficiency-monitor/src/: alerts.rs  collectors.rs  config.rs  dashboard.rs  error.rs  lib.rs  types.rs
crates/efficiency-monitor/tests/: integration.rs  proptest.rs
crates/event-bus/: Cargo.toml
crates/event-bus/benches/: bus_bench.rs
crates/event-bus/src/: backpressure.rs  bus.rs  error.rs  lib.rs  logging.rs  topic.rs  types.rs
crates/event-bus/tests/: agent_events_test.rs  control_events.rs  critical_channel_test.rs  event_bus.rs  (+3 more)
crates/faae-router/: Cargo.toml
crates/gea-activator/: Cargo.toml
crates/gqep-executor/: Cargo.toml
crates/gsoe-evolution/: Cargo.toml
crates/hcw-window/: Cargo.toml
crates/kvbsr-router/: Cargo.toml
crates/lsct-tiering/: Cargo.toml
crates/mcp-mesh/: Cargo.toml
crates/mlc-engine/: Cargo.toml
crates/model-router/: Cargo.toml
crates/mtpe-executor/: Cargo.toml
crates/nexus-core/: Cargo.toml
crates/nmc-encoder/: Cargo.toml
crates/online-learning/: Cargo.toml
crates/osa-coordinator/: Cargo.toml
crates/parliament/: Cargo.toml
crates/pvl-layer/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cacr_budget_parse.rs  checkpoint_deserialize.rs  config_section_parse.rs  event_serialize.rs  quest_parse.rs  seccore_sandbox.rs  stub_form1_test.rs  stub_form3_test.rs
fuzz/src/: lib.rs
(+682 files in other folders)
