[package]
name = "acb-governor"
version.workspace = true
edition.workspace = true

[dependencies]
# L8 Parliament → L1 Core(向下依赖,event-bus 是唯一跨层通道,§2.2 依赖铁律)
event-bus = { path = "../event-bus" }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# chrono:时间滞后机制(复用 DECB tier_switch_lag_ms 模式,记录 last_switch_time)
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# criterion:性能基准测试框架(§7.1 测试矩阵约定)
criterion = { workspace = true }

[[bench]]
name = "governor_bench"
harness = false
