[package]
name = "chimera-cli"
version.workspace = true
edition.workspace = true

[dependencies]
# nexus-core:L1 核心类型(配置类型定义,向下依赖符合 §2.2 铁律)
nexus-core = { path = "../nexus-core" }
# event-bus:L1 事件总线,TUI 实时数据订阅依赖(向下依赖符合 §2.2 铁律)
event-bus = { workspace = true }
# chimera-tui:L10 Interface 层 TUI 界面(ratatui + crossterm)
chimera-tui = { workspace = true }
# quest-engine:L9 Quest 层,为 tui 命令提供控制事件上游消费示例(§2.2 向下依赖)
quest-engine = { path = "../quest-engine" }
# Clap:子命令式 CLI 框架,启用 derive 宏、env 变量支持、cargo 元信息
clap = { workspace = true }
# Figment:多源配置合并(默认 > File > Env > CLI 优先级)
figment = { workspace = true }
# Tokio:异步运行时,full feature 提供完整能力
tokio = { workspace = true }
# Serde:配置序列化/反序列化
serde = { workspace = true }
serde_json = { workspace = true }
# anyhow:应用层错误处理(库层应使用 thiserror)
anyhow = { workspace = true }
# tracing:结构化日志,避免 println! 滥用
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# tempfile:集成测试中生成临时配置文件
tempfile = { workspace = true }
# proptest:属性测试框架,验证 CLI 参数解析的不变量(对应 E-MINOR-1)
proptest = { workspace = true }
# criterion:性能基准框架,用于 OnceLock 并发压测(SubTask S1)
criterion = { workspace = true }

# 显式声明二进制目标,确保 main.rs 被识别为 chimera 可执行文件
[[bin]]
name = "chimera"
path = "src/main.rs"

# OnceLock 14 section 懒加载并发性能基准(SubTask S1)
# WHY harness = false:criterion 自带 main + 命令行解析,需禁用 libtest 默认 harness
[[bench]]
name = "config_concurrency_bench"
harness = false
