[package]
name = "cmt-tiering"
version.workspace = true
edition.workspace = true

[dependencies]
# L1 Core:EventBus 跨层通信,发布 CapabilityTiered 事件(Week 3 Task 6 新增)
event-bus = { path = "../event-bus" }
# L1 Core:nexus-core(SubTask 21.2 — 共享 sqlite_pragma 模块,消除 PRAGMA 重复实现)
nexus-core = { path = "../nexus-core" }
# Warm/Cold 层 SQLite 持久化(WAL 模式与附加数据库,避免新依赖)
rusqlite = { workspace = true }
# Hot 层线程安全分片锁(支持并发读写)
dashmap = { workspace = true }
# 序列化:条目持久化与事件 payload
serde = { workspace = true }
serde_json = { workspace = true }
# 库层错误类型标准(§4.1:库层用自定义 thiserror enum)
thiserror = { workspace = true }
# 时间戳:CapabilityEntry 访问时间与衰减计算
chrono = { workspace = true }
# 异步运行时与 spawn_blocking(Cold/Ice 层文件 I/O 包装)
tokio = { workspace = true }
# 结构化日志(操作追踪与调试)
tracing = { workspace = true }

[dev-dependencies]
# 测试用临时文件/目录(跨平台安全),用于 Warm/Cold/Ice 层持久化测试
tempfile = { workspace = true }
# 基准测试框架(SubTask 11.1:Week 3 复审扩展)
criterion = { workspace = true }
# 属性测试框架(SubTask 15.12:DecayCalculator 单调递减不变量验证)
proptest = { workspace = true }

[[bench]]
name = "hot_lru"
harness = false

[[bench]]
name = "pragma_capable_bench"
harness = false
