[package]
name = "csn-substitutor"
version.workspace = true
edition.workspace = true

[dependencies]
# 异步运行时:timeout 超时控制 + spawn 后台订阅任务
tokio = { workspace = true }
# 配置与类型序列化(#[derive(Serialize, Deserialize)])
serde = { workspace = true, features = ["derive"] }
# 应用层错误(顶层调用方使用,库层用 thiserror)
anyhow = { workspace = true }
# 库层错误类型标准(§4.1:库层用自定义 thiserror enum)
thiserror = { workspace = true }
# 结构化日志(替代触发失败、降级链越界告警)
tracing = { workspace = true }
# UUIDv7 降级链 ID 生成(时间有序,便于追溯)
uuid = { workspace = true }
# 时间戳(能力注册时刻、降级链创建时刻)
chrono = { workspace = true }
# 并发安全能力注册表(O(1) 分片查找)
dashmap = { workspace = true }
# L1 Core:跨层通信唯一通道,发布 CsnSubstitutionTriggered + 订阅 McpMeshTransactionCompleted
event-bus = { path = "../event-bus" }
# L1 Core:CLV 语义向量类型(可选,用于与 nexus-core 类型对齐)
nexus-core = { path = "../nexus-core" }
# P0-14:复用mlc-engine的LSH-ANN索引实现HNSW近似最近邻
mlc-engine = { path = "../mlc-engine" }

[dev-dependencies]
# 性能基准框架(SubTask 2.7)
criterion = { workspace = true }
# JSON 序列化测试(config serde 往返)
serde_json = { workspace = true }
# 属性测试(§3.3.2 新 crate 准入 checklist 第 3 条要求)
proptest = { workspace = true }

# 性能基准配置:harness=false 以使用 criterion 自定义 main
[[bench]]
name = "substitutor_benchmark"
harness = false
