[package]
name = "efficiency-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
# 异步运行时:spawn 后台订阅任务 + 超时控制
tokio = { workspace = true }
# 配置与类型序列化(#[derive(Serialize, Deserialize)])
serde = { workspace = true, features = ["derive"] }
# 应用层错误(顶层调用方使用,库层用 thiserror)
anyhow = { workspace = true }
# 库层错误类型标准(§4.1:库层用自定义 thiserror enum)
thiserror = { workspace = true }
# 结构化日志(告警发布失败、Critical 事件告警)
tracing = { workspace = true }
# UUIDv7 事件 ID 生成(与 EventBus 对齐)
uuid = { workspace = true }
# 时间戳(指标样本时间戳、告警 cooldown 计算)
chrono = { workspace = true }
# 并发安全计数器(O(1) 分片查找,Lock-free 读取)
dashmap = { workspace = true }
# Prometheus 指标注册表与文本编码(用于 /metrics 端点标准格式输出)
prometheus-client = { workspace = true }
# L1 Core:跨层通信唯一通道,订阅 NexusEvent + 发布 EfficiencyAlertTriggered
event-bus = { path = "../event-bus" }
# L1 Core:领域类型(架构依赖规则要求,本 crate 仅依赖 event-bus + nexus-core)
nexus-core = { path = "../nexus-core" }

[dev-dependencies]
# 性能基准框架(SubTask 4.7)
criterion = { workspace = true }
# JSON 序列化测试(config serde 往返)
serde_json = { workspace = true }
# 属性测试(§3.3.2 新 crate 准入 checklist 第 3 条要求)
proptest = { workspace = true }

# 性能基准配置:harness=false 以使用 criterion 自定义 main
[[bench]]
name = "monitor_benchmark"
harness = false
