[package]
name = "event-bus"
version.workspace = true
edition.workspace = true

[dependencies]
# 全部使用 workspace 共享依赖(§4.1 规范)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { workspace = true }
# Prometheus 指标注册表与文本编码(Phase V Task V-8:/metrics 端点导出)
prometheus-client = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
# tracing-test:捕获 tracing 日志,验证 Critical 事件无订阅者时的 warn 日志(SubTask 17.2)
tracing-test = { workspace = true }
